[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/sfx/crowd.ogg" type="AudioStream" id=1]
[ext_resource path="res://assets/sound/12_string_ramble.ogg" type="AudioStream" id=2]
[ext_resource path="res://scripts/global_scene.gd" type="Script" id=3]

[sub_resource type="Environment" id=1]
glow_enabled = true
glow_bloom = 0.2

[node name="global_scene" type="Node"]
script = ExtResource( 3 )

[node name="bgStadium" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 1 )
volume_db = -80.0
bus = "ambience"

[node name="bgMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 1 )
